Last fixes for UI-resize
The UI does now have a perfect resize for height layout. Scrollbars
appears exactly right. There needs to be some future improvements on
handling really small width (sub 400 pixels) on mobile devices.

--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -12,7 +12,7 @@ html {
     background-size: cover;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 750px) {
 
     html {
         background: white;
@@ -83,6 +83,11 @@ header {
         font-size: 1.1em;
     }
 
+#header {
+    width: 100%;
+    clear: both;
+    min-width: 480px;
+}
 
 #AppContainer {
     margin: 0;
@@ -119,6 +124,12 @@ header {
         padding: 10px;
         border-radius: 7px;
     }
+
+
+#toolbar {
+     width: 100%;
+     padding-bottom: 4px;
+}
 
 .action {
     cursor: pointer;
@@ -282,11 +293,6 @@ p.description_content {
 
 
 
-#header {
-    width: 100%;
-    clear: both;
-}
-
 #content {
     width: 100%;
 }
@@ -330,7 +336,6 @@ p.description_content {
 #friendlist {
     border-bottom: 2px solid silver;
     height: 100px;
-    margin-bottom: 5px;
 }
 
     #friendlist div {
@@ -354,10 +359,13 @@ p.description_content {
 }
 
 .margin {
-    margin: 10px;
+    margin-top: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
-footer {
+/*footer {
     width: 100%;
     height: 22px;
     height: 0px;
@@ -368,7 +376,7 @@ footer {
     footer div {
         margin-left: 5px;
         margin-top: 1px;
-    }
+    }*/
 
 .auth-box {
     text-align: right;
